# wwmm2

./: .gitignore  .oxfmtrc.json  components.json  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json
native/dll-injector/: Cargo.toml  howtouse.md  package.json
native/dll-injector/src/: injector_util.rs  main.rs
native/extractor/: Cargo.toml  build.rs  package.json
native/extractor/src/: lib.rs
native/fs/: Cargo.toml  package.json
native/fs/src/: lib.rs
native/mod-manager/: .gitignore  Cargo.toml  package.json
native/mod-manager/src/: lib.rs
native/mod-tools/: Cargo.toml  index.d.ts  index.js  package.json
native/mod-tools/src/: lib.rs  texture_resizer.rs
native/static-glb/: Cargo.toml  package.json
native/static-glb/src/: lib.rs
native/utils/: Cargo.toml  constants.ts  package.json
native/utils/src/: lib.rs
plugins/: ipc-generator.ts  native-binding.ts
src/main/: index.ts  semaphore.ts  setting.ts
src/main/internal/: github-rate.ts  http.ts  logger.ts  protocol.ts  updater.ts  utils.ts  windowState.ts
src/main/internal/db/: client.ts  schema.ts
src/main/ipc/: index.ts
src/main/ipc/handlers/: fix-tools-manager.ts  gamebanana.ts  logger.ts  mod.ts  path-selector.ts  setting.ts  tools.ts  util.ts  window.ts  wuwa-mod-fixer.ts  xxmi.ts
src/main/lib/: compressor.ts  crypto.ts  fingerprint.ts  fs.ts  go-process.ts  mod-download-metadata.ts  native.ts  parallel-downloader.ts  path-selector.ts  script-executor.ts  toggle-viewer-core.ts  tray.ts  utils.ts  watcher.ts
src/main/lib/custom-downloader/: download-file.ts  file-detection.ts  file-operations.ts  index.ts  utils.ts
src/main/lib/mod-static-glb/: animation.ts  build.ts  builder.ts  dxgi-utils.ts  fmt-loader.ts  geometry.ts  index.ts  ini-expression.ts  ini-loader.ts  material.ts  mesh-key.ts  override-analysis.ts  resource-loader.ts  shape-key.ts  shared.ts  texture-utils.ts  types.ts  ui-asset.ts  variant.ts
src/main/protocals/: index.ts  local.ts  model-viewer-memory.ts
src/main/server/: index.ts
src/main/services/: archive.ts  mod-manager.ts  startup-cleanup.ts  util.ts  xxmi.ts
src/main/services/gamebanana/: index.ts  model.ts
src/main/services/mod-manager/: f10.ts  imports.ts  index.ts  ini.ts  library.ts  mod-actions.ts  path-utils.ts  presets.ts  shader-fixes.ts  watchers.ts
src/main/services/mod-tools/: dll-builder.ts  fix-tool.ts  index.ts  static-glb.ts  texture-resizer.ts  texture-roles.ts  toggle-persist.ts  toggle-viewer.ts  wuwa-mod-fixer.ts
src/main/services/protocol/: local.ts  model-viewer-memory.ts
src/main/windows/: main.ts  setting.ts  utils.ts
src/main/worker/: sha256-piscina.worker.ts
src/main/worker/mod-tools/: toggle-viewer.utility.ts
src/preload/: index.d.ts
src/renderer/: index.html
src/renderer/src/: index.css  main.tsx  types.ts  utils.ts
src/renderer/src/components/: common.tsx  date-picker.tsx  dock.tsx  download-confirmation-overlay.tsx  game-icon.tsx  icon.tsx  loaders.tsx  path-selector-dialog.tsx  root-provider.tsx  sidebar.tsx  theme-provider.tsx  titlebar.tsx  update-alert-dialog.tsx
src/renderer/src/components/fix-tool-manager/: fix-tool-list.tsx  preset-builder.tsx  preset-viewer.tsx
src/renderer/src/components/mod/: add-game-dialog.tsx  character-sidebar-content.tsx  character-sidebar-grid.tsx  character-sidebar-item-grid.tsx  character-sidebar-item-row.tsx  utils.ts  (+28 more)
src/renderer/src/hooks/: use-confirm-trash.tsx  use-delayed-skeleton.ts  use-filtered-mods.ts  use-gamebanana-data.ts  use-global-events.ts  use-mod-actions.tsx  use-mod-context-menu-data.ts  use-mod-data.ts  use-mod-drag-drop.ts  use-mod-events.ts  use-mod-fix-runner.tsx  use-mod-mutations.ts  use-mod-shortcuts.ts  use-settings.ts  use-titlebar.tsx
src/renderer/src/lib/: ipc.ts  logger.ts  sejong.ts  settings.ts  start-page.ts  str-filter.ts
src/renderer/src/routes/: __root.tsx  index.tsx
src/renderer/src/store/: gamebanana.ts  global.ts  mod.ts
src/renderer/src/types/: mod.ts
src/shared/: drive.ts  key-formatter.ts  mod.ts  settings.ts  transfer-progress.ts  types.ts  updater.ts  utils.ts  xxmi-match.ts
src/shared/schemas/: xxmi.ts
(+81 files in other folders)
