[package]
edition = "2021"
name = "dll-injector"
version = "0.1.0"

[dependencies]
libloading = "0.8"
sysinfo = "0.30"
anyhow = "1.0"
clap = { version = "4.4.18", features = ["derive"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "unwind"

[[bin]]
name = "dll-injector"
path = "src/main.rs"
