
[package]
edition = "2021"
name = "extractor"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
compress-tools = "0.15.1"
libc = "0.2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "unwind"
