
[package]
edition = "2021"
name = "native_fs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
jwalk = "0.8.1"
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
notify = { version = "8.1.0" }
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_RestartManager"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "unwind"
