
[package]
edition = "2021"
name = "mod-manager"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
alphanumeric-sort = "1.5.5"
glob = "0.3.3"
napi = { version = "3.0.0", features = ["async", "tokio_rt"] }
napi-derive = "3.0.0"
rayon = "1.10.0"
sha2 = "0.10.9"
walkdir = "2.5.0"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "unwind"
