
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "mod_tools"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
ddsfile = "0.5.2"
image = { version = "0.25.8", default-features = false }
image_dds = { version = "0.7.2", default-features = false, features = ["ddsfile", "image", "encode"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
