
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "static_glb"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ddsfile = "0.5.2"
image = { version = "0.25.8", default-features = false, features = ["jpeg", "png"] }
image_dds = { version = "0.7.2", default-features = false, features = ["ddsfile", "image"] }
napi = "3.0.0"
napi-derive = "3.0.0"
sha2 = "0.10.9"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
