
[package]
edition = "2021"
name = "util"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ddsfile = "0.5.2"
image = { version = "0.25.8", default-features = false, features = ["png"] }
image_dds = { version = "0.7.2", default-features = false, features = ["ddsfile", "image"] }
jwalk = "0.8.1"
lazy_static = "1.4.0"
napi = { version = "3.0.0", features = ["async"] }
napi-derive = "3.0.0"
rayon = "1.11.0"
sysinfo = "0.38.1"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security"
]

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "unwind"
